<resources>
    <string name="app_name">OSPIFAK Mobile version</string>
    <!-- Strings related to login -->
    <string name="title">OSPIFAK</string>
    <string name="title_second_line">Mobile version</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Constraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">Contraseña inválida</string>
    <string name="login_failed">"Fallo al iniciar sesión"</string>

    <!-- Strings related to home -->
    <string name="holaCliente">Hola</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>

    <string name="inicio">Inicio</string>
    <string name="planes">Planes</string>
    <string name="reintegros">Reintegros y prestaciones</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="cotitulares">Cotitulares</string>
</resources>