<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/icono_de_inicio"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_planes"
            android:icon="@drawable/icono_planes"
            android:title="@string/planes" />
        <item
            android:id="@+id/nav_reintegros"
            android:icon="@drawable/icono_reintegros"
            android:title="@string/reintegros" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/silueta_de_usuario"
            android:title="@string/miPerfil" />
        <item
            android:id="@+id/nav_cerrarSesion"
            android:icon="@drawable/icono_salir"
            android:title="@string/cerrarSesion" />
    </group>
</menu>